# adf

./: README.md  adf.drawio
.devcontainer/: Dockerfile  devcontainer.json  ros_entrypoint.sh
adf_interfaces/: CMakeLists.txt  package.xml
adf_interfaces/srv/: Motion.srv
dispense/: package.xml  setup.cfg  setup.py
dispense/config/: params.yaml
dispense/dispense/: dispense_node.py
dispense/launch/: dispense.launch.py
proximity/: package.xml  setup.cfg  setup.py
proximity/config/: params.yaml
proximity/launch/: proximity.launch.py
proximity/proximity/: proximity_node.py
recorder/: CMakeLists.txt  package.xml
recorder/config/: params.yaml
recorder/include/recorder/: recorder.hpp
recorder/launch/: recorder.launch.py
recorder/src/: recorder.cpp  recorder_node.cpp
recorder/srv/: Record.srv
task_manager/: package.xml  setup.py
task_manager/launch/: task_manager.launch.py
task_manager/task_manager/: task_manager.py
vision/: CMakeLists.txt  package.xml
vision/config/: params.yaml
vision/include/vision/: vision.hpp
vision/launch/: vision.launch.py
vision/src/: vision.cpp  vision_node.cpp
vision/srv/: DogInVision.srv
