<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dispense</name>
  <version>0.0.0</version>
  <description>Used to dispense food and water for the ADF</description>
  <maintainer email="nilpamin2@gmail.com">nilp</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>std_srvs</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
