<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>recorder</name>
  <version>0.0.0</version>
  <description>Used to record camera feed in ADF</description>
  <maintainer email="nilpamin2@gmail.com">nilp</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rosbag2_cpp</build_depend>
  <build_depend>adf_interfaces</build_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rosbag2_cpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
